--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,41 @@
+
+@media (max-width: 400px) {
+  .head-image {
+      background-image: url(../image/married-mobile.jpg);
+  }
+}
+
+@media (min-width: 400px) {
+  .head-image {
+      background-image: url(../image/married-portrait.jpg);
+  }
+}
+
+@media (max-width: 768px) {
+  .head-image {
+    width: calc(100vw - 15px);
+  }
+}
+
+@media (min-aspect-ratio: 2/3) {
+  .head-image {
+      background-image: url(../image/married-carre-2000.jpg);
+  }
+}
+
+@media (min-aspect-ratio: 3/2) {
+  .head-image {
+      background-image: url(../image/married.jpg);
+  }
+}
+
 header {
   height: 100vh;
   box-shadow: 10px 10px 12px #555;
 }
 
 .head-image {
-  width: calc(100vw - 15px);
+  width: 100vw - 15px;
   height: 100%;
   background-size: cover;
 }
